Start of a basic layout.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,3 +1,24 @@
-HELLO FROM INDEX
+{% extends '_layouts/layout.html' %}
 
-TEST A CHANGE
+{% block page_title %}Index : {{serviceName}}{% endblock %}
+
+{% block header_before %}
+  {% include '_includes/cookie-message.html' %}
+  {% include '_includes/prototype-warning.html' %}
+{% endblock %}
+
+{% block header %}
+  <header role="banner" id="global-header">
+    <div class="header-container">
+      <a href="/" class="header-logo" title="Go to the index page">
+        <img src="/public/images/nhs-logotype-blue.svg" alt="NHS" width="79" height="32" />
+      </a>
+    </div>
+  </header>
+{% endblock %}
+
+{% block content %}
+  <p>Hello world</p>
+{% endblock %}
+
+{% block footer %}{% endblock %}
