--- a/app/views/_includes/prototype-warning.html
+++ b/app/views/_includes/prototype-warning.html
@@ -1,5 +1,5 @@
-<div class="notification-banner notification-banner__hiviz js-feedback-banner">
-  <p class="notification-banner--inner">
-    This is a prototype only. This is <strong>not</strong> a functional service.
+<div class="prototype-warning">
+  <p class="prototype-warning-inner">
+    Please note: this is <strong>not</strong> a functional service. No data is saved.
   </p>
 </div>
