--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -5,7 +5,17 @@
 @import "variables/colours";
 @import "variables/frutiger";
 
+//Typopgraphy
+@import "modules/typography/base";
+@import "modules/typography/headings";
+@import "modules/typography/paragraphs";
+@import "modules/typography/lists";
+@import "modules/typography/links";
+
+// Layout and grid
 @import "modules/layout/layout";
 @import "modules/layout/grid";
 
+//Individual modules
+@import "modules/banner/prototype";
 @import "modules/header-global/header-global";
