--- a/app/views/_layouts/layout.html
+++ b/app/views/_layouts/layout.html
@@ -10,11 +10,7 @@
   <body class="{% block body_css_classes %}{% endblock %}">
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
-    <div class="skiplinks">
-      <div class="skiplinks--inner">
-        <a href="#content" class="skiplinks--link">Skip to main content</a>
-      </div>
-    </div>
+    {% include '_includes/prototype-warning.html' %}
 
     {% block header_before %}{% endblock %}
 
@@ -22,7 +18,7 @@
       {% block header %}{% endblock %}
     </header>
 
-    <main id="content" role="main" tabindex="-1" class="util-nofocus">
+    <main id="content" role="main" class="content">
       {% block content %}{% endblock %}
     </main>
 
