--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,11 +2,6 @@
 
 {% block page_title %}Index : {{serviceName}}{% endblock %}
 
-{% block header_before %}
-  {% include '_includes/cookie-message.html' %}
-  {% include '_includes/prototype-warning.html' %}
-{% endblock %}
-
 {% block header %}
   <header role="banner" id="global-header">
     <div class="header-container">
@@ -19,6 +14,10 @@
 
 {% block content %}
   <p>Hello world</p>
+  <ul>
+    <li>Test <a href="#">Link</a></li>
+    <li>Test <a href="#">Link</a></li>
+  </ul>
 {% endblock %}
 
 {% block footer %}{% endblock %}
