Redo /public paths

--- a/app/views/_layouts/layout.html
+++ b/app/views/_layouts/layout.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>{% block page_title %}{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="/public/stylesheets/app.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
     {% block html_head %}{% endblock %}
   </head>
 
