--- a/app/views/_layouts/layout.html
+++ b/app/views/_layouts/layout.html
@@ -24,7 +24,9 @@
       {% block footer %}{% endblock %}
     </footer>
 
-    <!-- scripts etc -->
+    <script src="/scripts/jquery-1.12.4.min.js"></script>
+    <script src="/scripts/selection-buttons.js"></script>
+    <!-- additional scripts etc -->
     {% block body_after %}{% endblock %}
 
   </body>
