--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -367,3 +367,187 @@ body {
     height: 35px;
   }
 }
+
+.error-summary {
+  color: #D81E05;
+  margin: 14px 0;
+  padding: 0 14px;
+  background: #fff;
+  border: 4px solid #D81E05;
+}
+
+.error-summary a {
+  color: #D81E05;
+}
+
+.error-summary-heading {
+  font-size: 20px;
+}
+
+.form-group.-errors input,
+.form-group.-errors textarea {
+  border-color: #D81E05;
+}
+
+.error-hint {
+  display: block;
+  color: #D81E05;
+}
+
+input[type='text'] {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  display: block;
+  width: 100%;
+  margin: 14px 0 28px 0;
+  padding: 0 3.5px;
+  border: 2px solid #e6e6e6;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 400;
+  line-height: 42px;
+}
+
+input[type='text']:focus {
+  outline: 2px solid #FFB81C;
+}
+
+label {
+  display: block;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 700;
+  line-height: inherit;
+}
+
+label:focus {
+  outline: 2px solid #FFB81C;
+}
+
+.block-label {
+  display: block;
+  float: none;
+  clear: left;
+  position: relative;
+  padding: 8px 10px 9px 50px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+@media (min-width: 641px) {
+  .block-label {
+    float: left;
+    padding-top: 7px;
+    padding-bottom: 7px;
+  }
+}
+
+.block-label input {
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 0;
+  width: 38px;
+  height: 38px;
+}
+
+.js-enabled .block-label input {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+.js-enabled .block-label.selection-button-radio::before {
+  content: "";
+  border: 2px solid;
+  border-radius: 50%;
+  background: #fff;
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.js-enabled .block-label.selection-button-radio::after {
+  content: "";
+  border-radius: 50%;
+  background: currentColor;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 9px;
+  left: 9px;
+  zoom: 1;
+  filter: alpha(opacity=0);
+  opacity: 0;
+}
+
+.js-enabled .block-label.selection-button-checkbox::before {
+  content: "";
+  border: 2px solid;
+  background: #fff;
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.js-enabled .block-label.selection-button-checkbox::after {
+  content: "";
+  border: solid;
+  border-width: 0 0 5px 5px;
+  background: transparent;
+  width: 17px;
+  height: 7px;
+  position: absolute;
+  top: 10px;
+  left: 8px;
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  zoom: 1;
+  filter: alpha(opacity=0);
+  opacity: 0;
+}
+
+.js-enabled .block-label.selection-button-radio.focused::before, .js-enabled .block-label.selection-button-checkbox.focused::before {
+  -webkit-box-shadow: 0 0 0 5px #ffbf47;
+  -moz-box-shadow: 0 0 0 5px #ffbf47;
+  box-shadow: 0 0 0 5px #ffbf47;
+}
+
+.js-enabled .block-label.selection-button-radio.selected::after, .js-enabled .block-label.selection-button-checkbox.selected::after {
+  zoom: 1;
+  filter: alpha(opacity=100);
+  opacity: 1;
+}
+
+textarea {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  display: block;
+  width: 100%;
+  margin: 14px 0 28px 0;
+  padding: 0 3.5px;
+  border: 2px solid #e6e6e6;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 400;
+  line-height: inherit;
+}
+
+textarea:focus {
+  outline: 2px solid #FFB81C;
+}
