--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -21,6 +21,7 @@
 @import "modules/header-global/header-global";
 
 @import "modules/forms/errors";
+@import "modules/forms/fieldset";
 @import "modules/forms/input";
 @import "modules/forms/label";
 @import "modules/forms/radio-checkbox";
