--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -394,6 +394,22 @@ body {
   color: #D81E05;
 }
 
+fieldset {
+  border: 0;
+  padding: 0.01em 0 0 0;
+  margin: 0;
+  min-width: 0;
+}
+
+body:not(:-moz-handler-blocked) fieldset {
+  display: table-cell;
+}
+
+fieldset legend {
+  padding: 0;
+  display: table;
+}
+
 input[type='text'] {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
