--- a/app/assets/sass/variables/_colours.scss
+++ b/app/assets/sass/variables/_colours.scss
@@ -6,8 +6,14 @@ $white: #fff;
 // Newer colour palette items
 $blue: #0072c6;
 $nhs-blue: $blue;
+
 $dark-grey: #425563;
 $pale-grey: #d9e1e2;
+
+$yellow: #F7E214;
+
+// Functional colour aliases
+$focus-colour: $yellow;
 
 
 /*
@@ -24,7 +30,6 @@ $light-blue2: #66B0E8;
 $light-blue3: #A8E8FF; /* #70C1FF */
 $blue2: #0091C9;
 
-$yellow: #FFED00;
 $yellow2: #FFB81C;
 $yellow-dark: #cc9316;
 
