--- a/app/assets/sass/modules/forms/_radio-checkbox.scss
+++ b/app/assets/sass/modules/forms/_radio-checkbox.scss
@@ -6,17 +6,13 @@
   padding: 8px 10px 9px 50px;
   margin-bottom: 10px;
   cursor: pointer;
-}
 
-@media (min-width: 641px) {
-  .block-label {
+  @include media(mid) {
     float: left;
     padding-top: 7px;
     padding-bottom: 7px;
   }
-}
 
-.block-label {
   input {
     position: absolute;
     cursor: pointer;
@@ -25,8 +21,10 @@
     width: 38px;
     height: 38px;
   }
+}
 
-  .js-enabled & input {
+.js-enabled .block-label {
+  input {
     position: absolute;
     overflow: hidden;
     clip: rect(0 0 0 0);
@@ -36,73 +34,75 @@
     padding: 0;
     border: 0;
   }
-}
 
-.js-enabled .block-label.selection-button-radio::before {
-  content: "";
-  border: 3px solid $nhs-blue;
-  border-radius: 50%;
-  background: $white;
-  width: 34px;
-  height: 34px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  &.selection-button-radio::before {
+    content: "";
+    border: 3px solid $nhs-blue;
+    border-radius: 50%;
+    background: $white;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.js-enabled .block-label.selection-button-radio::after {
-  content: "";
-  border-radius: 50%;
-  background: currentColor;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  zoom: 1;
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
+  &.selection-button-radio::after {
+    content: "";
+    border-radius: 50%;
+    background: currentColor;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    zoom: 1;
+    filter: alpha(opacity=0);
+    opacity: 0;
+  }
 
-.js-enabled .block-label.selection-button-checkbox::before {
-  content: "";
-  border: 3px solid $nhs-blue;
-  background: $white;
-  width: 34px;
-  height: 34px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  &.selection-button-checkbox::before {
+    content: "";
+    border: 3px solid $nhs-blue;
+    background: $white;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.js-enabled .block-label.selection-button-checkbox::after {
-  content: "";
-  border: solid;
-  border-width: 0 0 5px 5px;
-  background: transparent;
-  width: 17px;
-  height: 7px;
-  position: absolute;
-  top: 11px;
-  left: 9px;
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  zoom: 1;
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
+  &.selection-button-checkbox::after {
+    content: "";
+    border: solid;
+    border-width: 0 0 5px 5px;
+    background: transparent;
+    width: 17px;
+    height: 7px;
+    position: absolute;
+    top: 11px;
+    left: 9px;
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    zoom: 1;
+    filter: alpha(opacity=0);
+    opacity: 0;
+  }
 
-.js-enabled .block-label.selection-button-radio.focused::before, .js-enabled .block-label.selection-button-checkbox.focused::before {
-  -webkit-box-shadow: 0 0 0 5px $focus-colour;
-  -moz-box-shadow: 0 0 0 5px $focus-colour;
-  box-shadow: 0 0 0 5px $focus-colour;
-}
+  &.selection-button-radio.focused::before,
+  &.selection-button-checkbox.focused::before {
+    -webkit-box-shadow: 0 0 0 5px $focus-colour;
+    -moz-box-shadow: 0 0 0 5px $focus-colour;
+    box-shadow: 0 0 0 5px $focus-colour;
+  }
 
-.js-enabled .block-label.selection-button-radio.selected::after, .js-enabled .block-label.selection-button-checkbox.selected::after {
-  zoom: 1;
-  filter: alpha(opacity=100);
-  opacity: 1;
+  &.selection-button-radio.selected::after,
+  &.selection-button-checkbox.selected::after {
+    zoom: 1;
+    filter: alpha(opacity=100);
+    opacity: 1;
+  }
 }
