--- a/app/views/_includes/masthead.html
+++ b/app/views/_includes/masthead.html
@@ -1,7 +1,8 @@
 <header role="banner" id="global-header">
   <div class="header-container">
     <a href="/" class="header-logo" title="Go to the index page">
-      <img src="/images/nhs-logotype-blue.svg" alt="NHS" width="79" height="32" />
+      <img src="/images/nhs-logotype-blue.svg" alt="NHS" />
     </a>
+    <span class="service-name">{{serviceName}}</span>
   </div>
 </header>
