--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -19,3 +19,9 @@ input[type='text'] {
     box-shadow: 0 0 0 5px $focus-colour;
   }
 }
+
+/*.form-group.-errors {
+  input[type='text'] {
+    border-color: $error-colour;
+  }
+}*/
