--- a/app/assets/sass/modules/header-global/_header-global.scss
+++ b/app/assets/sass/modules/header-global/_header-global.scss
@@ -1,7 +1,7 @@
 #global-header {
   @extend %block;
   @extend %contain-floats;
-  border-bottom: 4px solid $nhs-blue;
+  border-bottom: 3px solid $nhs-blue;
   padding-top: $leading;
   padding-bottom: $leading;
 }
@@ -18,6 +18,7 @@
 }
 
 .service-name {
+  color: $dark-grey;
   line-height: 32px;
   margin-left: $leading;
 }
