--- a/app/assets/sass/variables/_colours.scss
+++ b/app/assets/sass/variables/_colours.scss
@@ -5,7 +5,7 @@ $white: #fff;
 
 // Newer colour palette items
 $blue: #0072c6;
-$nhs-blue: $blue;
+$red: #D81E05;
 
 $dark-grey: #425563;
 $pale-grey: #d9e1e2;
@@ -13,7 +13,9 @@ $pale-grey: #d9e1e2;
 $yellow: #F7E214;
 
 // Functional colour aliases
+$nhs-blue: $blue;
 $focus-colour: $yellow;
+$error-colour: $red;
 
 
 /*
