--- a/app/views/_layouts/layout.html
+++ b/app/views/_layouts/layout.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{% block page_title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
     {% block html_head %}{% endblock %}
