--- a/app/assets/sass/modules/forms/_errors.scss
+++ b/app/assets/sass/modules/forms/_errors.scss
@@ -2,7 +2,7 @@
   color: $red;
   margin: $leading 0;
   padding: 0 $leading;
-  background: $white;
+  background: $pure-white;
   border: 4px solid $red;
 
   a {
