--- a/app/assets/sass/modules/forms/_errors.scss
+++ b/app/assets/sass/modules/forms/_errors.scss
@@ -1,24 +1,21 @@
 .error-summary {
-  color: $red;
-  margin: $leading 0;
-  padding: 0 $leading;
-  background: $pure-white;
-  border: 4px solid $red;
-
+  color: $error-colour;
   a {
-    color: $red;
+    color: $error-colour;
   }
-}
-.error-summary-heading {
-  font-size: $body;
 }
 
 .error-hint {
   display: block;
-  color: $red;
+  color: $error-colour;
 }
 
 .form-group.-errors {
-  border-left: $leading/2 solid $error-colour;
-  padding-left: $leading*2;
+  input,
+  textarea {
+    border-color: $error-colour;
+  }
+  textarea {
+
+  }
 }
