--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -1,11 +1,15 @@
 input[type='text'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   display: block; // Remove margin under textarea in Chrome and FF
   width: 100%;
   margin: $leading 0 $leading*2 0;
-  padding: 0 $leading/4;
+  padding: $leading/2 $leading/4;
   border: 3px solid $nhs-blue;
   font-family: inherit;
   font-size: inherit;
@@ -19,9 +23,3 @@ input[type='text'] {
     box-shadow: 0 0 0 5px $focus-colour;
   }
 }
-
-/*.form-group.-errors {
-  input[type='text'] {
-    border-color: $error-colour;
-  }
-}*/
