--- a/app/assets/sass/modules/layout/_layout.scss
+++ b/app/assets/sass/modules/layout/_layout.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: $page-colour;
+  background-color: $page-background;
 }
 
 // Block for a layout "row" - i.e. header, content, footer
