--- a/app/assets/sass/variables/_colours.scss
+++ b/app/assets/sass/variables/_colours.scss
@@ -1,7 +1,7 @@
 // NHS Colour palette, from http://www.nhsidentity.nhs.uk/
 $pure-black: #000;
 $black: #231f20;
-$white: #fff;
+$pure-white: #fff;
 
 // Newer colour palette items
 $blue: #0072c6;
@@ -13,6 +13,8 @@ $pale-grey: #d9e1e2;
 $yellow: #F7E214;
 
 // Functional colour aliases
+$page-background: $pure-white;
+$text-colour: $black;
 $nhs-blue: $blue;
 $focus-colour: $yellow;
 $error-colour: $red;
@@ -66,7 +68,7 @@ $text-colour: #0b0c0c; //off blacks
 $link-colour: $blue;
 $hover-link-colour: $light-blue2;
 $visited-link-colour: #4c2c92;
-$link-colour-on-blue: $white;
+$link-colour-on-blue: $pure-white;
 $visited-link-colour-on-blue: #D4EFFF; /*#5CAEED; /* #0AC0FC; E2EEFB */
 
 $focus-colour: $yellow;
